--- a/package.json
+++ b/package.json
@@ -5,22 +5,28 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "sequelize": "sequelize",
     "dev": "nodemon app.js"
   },
-
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.17.0",
     "method-override": "^3.0.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "pg": "^7.7.1",
     "pg-hstore": "^2.3.2",
     "pug": "^2.0.4",
     "sequelize": "^4.44.3",
+    "sequelize-auto-migrations": "^1.0.3",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
