--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "authenticator": "^1.1.5",
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
@@ -22,6 +23,7 @@
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.7.1",
     "pg-hstore": "^2.3.2",
     "pug": "^2.0.4",
@@ -30,6 +32,7 @@
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
+    "handlebars": "^4.5.0",
     "nodemon": "^1.18.8",
     "sequelize-cli": "^5.5.1"
   }
